// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregator should render an Aggregator items with a custom render function 1`] = `
<div
  id="custom"
>
  <div
    id="render"
  >
    <div
      id="wrappers"
    >
      <AggregatorItem
        aggregatorDelegate={
          {
            "hasFocus": false,
            "itemState": undefined,
            "releaseFocus": undefined,
            "requestFocus": [Function],
          }
        }
        key="1"
      />
      <AggregatorItem
        aggregatorDelegate={
          {
            "hasFocus": false,
            "itemState": undefined,
            "releaseFocus": undefined,
            "requestFocus": [Function],
          }
        }
        key="2"
      />
      <AggregatorItem
        aggregatorDelegate={
          {
            "hasFocus": false,
            "itemState": undefined,
            "releaseFocus": undefined,
            "requestFocus": [Function],
          }
        }
        key="3"
      />
    </div>
  </div>
</div>
`;

exports[`Aggregator should render an Aggregator with items 1`] = `
<div>
  <AggregatorItem
    aggregatorDelegate={
      {
        "hasFocus": false,
        "itemState": undefined,
        "releaseFocus": undefined,
        "requestFocus": [Function],
      }
    }
    key="1"
  />
  <AggregatorItem
    aggregatorDelegate={
      {
        "hasFocus": false,
        "itemState": undefined,
        "releaseFocus": undefined,
        "requestFocus": [Function],
      }
    }
    key="2"
  />
  <AggregatorItem
    aggregatorDelegate={
      {
        "hasFocus": false,
        "itemState": undefined,
        "releaseFocus": undefined,
        "requestFocus": [Function],
      }
    }
    key="3"
  />
</div>
`;

exports[`Aggregator should render an Aggregator without optional props 1`] = `<div />`;
